<resources>
    <string name="app_name">Grocery Manager</string>
    <string name="action_settings">Settings</string>

    <string name="menu_grocery_settings">Grocery Settings</string>
    <string name="grocery_settings_label">Grocery Settings</string>
    <string name="grocery_settings_label_text">Food-items</string>
    <string name="grocery_settings_label_vegetables">Vegetables</string>
    <string name="add_food_item_text">Add Food Item</string>
    <string name="hint_fooditem_search">Search food-item</string>
    <string name="title_search_fooditem">Search</string>
    <string name="action_configure">Configure</string>
    <string name="toast_checked">Check!</string>
    <string name="textview_info_placeholder">Placeholder I\'m baby skateboard wayfarers dreamcatcher cold-pressed artisan next level organic. Salvia bitters pickled tumeric. Venmo actually everyday carry pour-over man braid yuccie tote bag. Master cleanse tumeric microdosing drinking vinegar portland keffiyeh glossier 3 wolf moon you probably haven\'t heard of them sriracha gentrify hashtag sustainable swag kale chips. Migas pop-up pickled, viral readymade normcore four loko hot chicken tacos waistcoat polaroid cloud bread shabby chic pinterest blog.</string>
    <string name="mainActivity_actionbar_label">Groceries for </string>
    <string name="food_image_content_description">Food-item image</string>
    <string name="hint_item_label">Item Label</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_amount">Amount</string>
    <string name="textview_frequency_1">Frequency:</string>
    <string name="textview_frequency_2">times in</string>
    <string name="button_week">A Week</string>
    <string name="button_twoweeks">Two Weeks</string>
    <string name="button_month">A Month</string>
    <string name="hint_more_information">More information:</string>

    <string-array name="food_labels">
        <item>Jauhelihapaketti</item>
        <item>Pakastevihannekset</item>
        <item>Reissumies</item>
        <item>Pätkisjäätelö</item>
    </string-array>

    <string-array name="food_brands">
        <item>Maomix</item>
        <item>Karjala</item>
        <item>Atria</item>
        <item>Oatly</item>
    </string-array>

    <string-array name="food_infos">
        <item>Im baby umami excepteur bushwick fanny pack adipisicing knausgaard. Food truck in
            elit pickled shoreditch glossier, ad et. In umami hella, vape qui wayfarers gluten-free
            nulla vexillologist yr hammock tbh skateboard meggings irure. Commodo heirloom wolf
            distillery pariatur, aesthetic green juice banjo reprehenderit fingerstache vegan
            seitan tousled kale chips semiotics. Enamel pin anim gochujang reprehenderit excepteur.
            Woke viral man braid irony, celiac hashtag church-key velit craft beer.</item>
        <item>Im baby green juice cloud bread glossier fam tattooed vegan lumbersexual quinoa,
            asymmetrical mumblecore vape. Kombucha brunch cardigan intelligentsia, kickstarter
            street art affogato franzen tattooed deep v snackwave freegan tumblr pug. Yr tousled
            dreamcatcher kogi, literally tumeric occupy craft beer distillery tumblr gentrify
            chillwave. +1 microdosing snackwave, literally post-ironic roof party raclette master
            cleanse disrupt. Jianbing four loko prism pork belly selvage farm-to-table yr green
            juice, ugh microdosing dreamcatcher franzen.</item>
        <item>Im baby skateboard wayfarers dreamcatcher cold-pressed artisan next level organic.
            Salvia bitters pickled tumeric. Venmo actually everyday carry pour-over man braid
            yuccie tote bag. Master cleanse tumeric microdosing drinking vinegar portland keffiyeh
            glossier 3 wolf moon you probably havent heard of them sriracha gentrify hashtag
            sustainable swag kale chips. Migas pop-up pickled, viral readymade normcore four loko hot
            chicken tacos waistcoat polaroid cloud bread shabby chic pinterest blog.</item>
        <item>Im baby skateboard wayfarers dreamcatcher cold-pressed artisan next level organic.
            Salvia bitters pickled tumeric. Venmo actually everyday carry pour-over man braid
            yuccie tote bag. Master cleanse tumeric microdosing drinking vinegar portland keffiyeh
            glossier 3 wolf moon you probably havent heard of them sriracha gentrify hashtag
            sustainable swag kale chips. Migas pop-up pickled, viral readymade normcore four loko
            hot chicken tacos waistcoat polaroid cloud bread shabby chic pinterest blog.</item>
    </string-array>

    <string-array name="food_weights">
        <item>400g</item>
        <item>500g</item>
        <item>350g</item>
        <item>1kg</item>
    </string-array>

    <string-array name="food_amounts">
        <item>4kpl</item>
        <item>1kpl</item>
        <item>2kpl</item>
        <item>5kpl</item>

    </string-array>

    <string-array name="food_images">
        <item>@drawable/jauhelihapaketti</item>
        <item>@drawable/pakastevihannekset</item>
        <item>@drawable/ruisleipa</item>
        <item>@drawable/jaatelo</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="groceries_header">Groceries</string>

    <!-- Grocery Preferences -->
    <string name="grocery_day_title">Grocery days</string>
    <string name="error_not_grocery_day">It is not a grocery day!</string>
    <string name="newFoodItem_title">Add Food-item</string>

    <!-- Snackbars -->
    <string name="snackbar_no_grocery_days">You must set grocery days in settings before you can
        configure your grocerylist!</string>
    <string name="snackbar_not_enough_grocery_days">You don\'t have enough grocery days per week
        to have this food-item this often!</string>
    <string name="label_empty">The label field cannot be empty!</string>

    <string name="imageview_grocerylist_content_description">Grocery Item</string>
    <string name="fooditem_detail_more_info">Info:</string>

    <!-- Configurations Activity -->
    <string name="comma">%1$s,</string>
    <string name="hint_unit">Unit</string>

    <!-- Main Activity -->
    <string name="main_not_grocery_day">It is not a grocery day!</string>
    <string name="main_no_grocery_days_set">No grocery days set!</string>
    <string name="no_grocery_items">No grocery items configured yet!</string>
    <string name="main_groceries_done">Groceries done!</string>

    <plurals name="times_a_week">
        <item quantity="one">%1$d time a week</item>
        <item quantity="other">%1$d times a week</item>
    </plurals>

    <plurals name="times_in_two_weeks">
        <item quantity="one">%1$d time in two weeks</item>
        <item quantity="other">%1$d times in two weeks</item>
    </plurals>

    <plurals name="times_in_a_month">
        <item quantity="one">%1$d time in a month</item>
        <item quantity="other">%1$d times in a month</item>
    </plurals>

</resources>
